--- a/emacs.org
+++ b/emacs.org
@@ -673,6 +673,38 @@ Sometimes installing a new package will bork packages.  This will recompile the
   (untabify (point-min) (point-max)))
 #+end_src
 
+*** Opening files helpers
+Heavily borrowed from
+#+begin_src emacs-lisp
+(defun forge/sudo-file-path (file)
+  "Return path for FILE with sudo access."
+  (let ((host (or (file-remote-p file 'host) "localhost")))
+    (concat "/" (when (file-remote-p file)
+                  (concat (file-remote-p file 'method) ":"
+                          (if-let (user (file-remote-p file 'user))
+                              (concat user "@" host) host)
+                          "|"))
+            "sudo:root@" host
+            ":" (or (file-remote-p file 'localname)
+                    file))))
+
+(defun forge/sudo-find-file (file)
+  "Open FILE as root."
+  (interactive "FOpen file as root: ")
+  (find-file (forge/sudo-file-path file)))
+
+(defun forge/sudo-this-file ()
+  "Open current file as root."
+  (interactive)
+  (find-file
+   (forge/sudo-file-path
+    (or buffer-file-name
+        (or buffer-file-name
+            (when (or (derived-mode-p 'dired-mode)
+                      (derived-mode-p 'wdired-mode))
+              default-directory))))))
+#+end_src
+
 *** Miscellaneous functions
 The following functions are not so much tied to features.  They are just various
 helpers.
