--- a/emacs.org
+++ b/emacs.org
@@ -1454,6 +1454,7 @@ as part of a DWIM function to switch tabs.
   (setq tab-bar-new-tab-choice t)
   (setq tab-bar-new-tab-to 'right)
   (setq tab-bar-position nil)
+  (setq tab-bar-select-tab-modifiers '(super meta))
   (setq tab-bar-show t))
 
 ;; https://gitlab.com/protesilaos/dotfiles/-/blob/master/emacs/.emacs.d/prot-lisp/prot-tab.el
@@ -3552,7 +3553,13 @@ Miscellaneous notes:
 
 #+begin_src emacs-lisp
 (use-package org-mime
-  :hook (message-mode . (lambda () (local-set-key "\C-c\M-o" 'org-mime-htmlize)))
+  :config
+  (add-hook 'message-mode-hook
+            (lambda ()
+              (local-set-key "\C-c\M-o" 'org-mime-htmlize)))
+  (add-hook 'org-mode-hook
+            (lambda ()
+              (local-set-key "\C-c\M-o" 'org-mime-org-buffer-htmlize)))
   :init
   (setq org-mime-export-options '(:section-numbers nil :with-author nil :with-toc nil)))
 #+end_src
@@ -3846,7 +3853,6 @@ articles every 2 hours.
 #+begin_src emacs-lisp
 (use-package elfeed
   :commands (elfeed)
-  :hook (elfeed-show-mode . olivetti-mode)
   :bind
   (:map elfeed-search-mode-map
         ("j" . next-line)
@@ -4107,8 +4113,8 @@ Resources:
                                  (concat
                                   "┌─["
                                   (user-login-name) "" (system-name)
-                                  " 🗁 " (abbreviate-file-name (eshell/pwd))
-                                  " 🕗 " (format-time-string "%a %b %d %H:%M" (current-time))
+                                  " " (abbreviate-file-name (eshell/pwd))
+                                  " | " (format-time-string "%a %b %d %H:%M" (current-time))
                                   "]\n"
                                   "└─>" (if (= (user-uid) 0) " # " " $ "))) )
   (add-hook 'eshell-mode-hook (lambda ()
