--- a/emacs.org
+++ b/emacs.org
@@ -1450,12 +1450,13 @@ as part of a DWIM function to switch tabs.
 #+begin_src emacs-lisp
 (when (require 'tab-bar nil 'noerror)
   (tab-bar-mode)
-  (setq tab-bar-close-tab-select 'recent)
-  (setq tab-bar-new-tab-choice t)
-  (setq tab-bar-new-tab-to 'right)
-  (setq tab-bar-position nil)
-  (setq tab-bar-select-tab-modifiers '(super meta))
-  (setq tab-bar-show t))
+  (setq tab-bar-close-tab-select 'recent
+        tab-bar-new-tab-choice 'ibuffer
+        tab-bar-new-tab-to 'right
+        tab-bar-position nil
+        tab-bar-select-tab-modifiers '(super meta)
+        tab-bar-tab-hints t
+        tab-bar-show t))
 
 ;; https://gitlab.com/protesilaos/dotfiles/-/blob/master/emacs/.emacs.d/prot-lisp/prot-tab.el
 (defun prot-tab--tab-bar-tabs ()
