continue to fiddle with tab-bar settings

--- a/emacs.org
+++ b/emacs.org
@@ -1451,12 +1451,13 @@ as part of a DWIM function to switch tabs.
 (when (require 'tab-bar nil 'noerror)
   (tab-bar-mode)
   (setq tab-bar-close-tab-select 'recent
+        tab-bar-close-button-show nil
         tab-bar-new-tab-choice 'ibuffer
         tab-bar-new-tab-to 'right
         tab-bar-position nil
         tab-bar-select-tab-modifiers '(super meta)
         tab-bar-tab-hints t
-        tab-bar-show t))
+        tab-bar-show 1))
 
 ;; https://gitlab.com/protesilaos/dotfiles/-/blob/master/emacs/.emacs.d/prot-lisp/prot-tab.el
 (defun prot-tab--tab-bar-tabs ()
