--- a/emacs.org
+++ b/emacs.org
@@ -1017,6 +1017,10 @@ looks good.  It will also define a default theme to start with.
 ;; https://github.com/cpaulik/emacs-material-theme
 (use-package material-theme)
 
+;; https://gitlab.com/protesilaos/ef-themes
+(use-package ef-themes
+  :straight (ef-themes :type git :host gitlab :repo "protesilaos/ef-themes"))
+
 ;; https://gitlab.com/protesilaos/modus-themes
 (use-package modus-themes
   :hook
