minor updates to org config

--- a/emacs.org
+++ b/emacs.org
@@ -3432,6 +3432,7 @@ Miscellaneous notes:
                                        ("l" . "src emacs-lisp")
                                        ("m" . "export md")
                                        ("p" . "src python")
+                                       ("q" . "quote")
                                        ("s" . "src")
                                        ("v" . "verse")
                                        ("y" . "src yaml")))
@@ -3497,10 +3498,6 @@ Miscellaneous notes:
                                 ("i" "Inbox" entry
                                  (file "inbox.org")
                                  "* TODO %? \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\nReference: %a\n")
-
-                                ("t" "To do" entry
-                                 (file+headline "~/forge/journal.org" "Inbox")
-                                 "* TODO %? \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\nReference: %a\n" :prepend t)
 
                                 ("n" "Meeting notes" entry
                                  (file+olp+datetree "~/forge/journal.org")
