only do a visible bell - no audio

--- a/emacs.org
+++ b/emacs.org
@@ -364,6 +364,9 @@ Configure Emacs to use the above defined paths.  Also configure some basic behav
   (setq inhibit-splash-screen t
         ;; always load the newer version of a file
         load-prefer-newer t
+        ;; set a visible bell and squash the audio bell
+        visibile-bell t
+        ring-bell-function #'ignore
         ;; warn when opening files bigger than 50MB
         large-file-warning-threshold 50000000))
 
