--- a/emacs.org
+++ b/emacs.org
@@ -1118,7 +1118,7 @@ The following are modes I no longer use.  Configuration is here for reference.
   (interactive)
   (when forge-theme
     (load-theme forge-theme t))
-  (setq visibile-bell t                 ;; set a visible bell ...
+  (setq visible-bell t                 ;; set a visible bell ...
         ring-bell-function #'ignore)    ;; and squash the audio bell
   (when (display-graphic-p)
     (when (forge/system-type-darwin-p)
