minor updates to modus and org
define url for modus
update/prune org-modules to what is currently in org

--- a/emacs.org
+++ b/emacs.org
@@ -1031,6 +1031,7 @@ looks good.  It will also define a default theme to start with.
 
 ;; https://gitlab.com/protesilaos/modus-themes
 (use-package modus-themes
+  :straight (modus-themes :type git :host github :repo "protesilaos/modus-themes")
   :hook
   (modus-themes-after-load-theme . forge/lin-macos-system-colors)
   :custom
@@ -3543,7 +3544,7 @@ Miscellaneous notes:
   (setq org-tags-exclude-from-inheritance '("crypt"))
   ;;
   (setq org-columns-default-format "%50ITEM(Task) %2PRIORITY %10Effort(Effort){:} %10CLOCKSUM"
-        org-modules '(org-id ol-eww org-bbdb org-bibtex ol-docview org-info org-irc org-habit ol-notmuch)
+        org-modules '(org-id ol-eww ol-docview ol-info ol-irc org-habit)
         org-src-preserve-indentation t
         org-src-window-setup 'current-window                    ;; use current window when editing a source block
         org-cycle-separator-lines 2                             ;; leave this many empty lines in collapsed view
