--- a/emacs.org
+++ b/emacs.org
@@ -3590,8 +3590,7 @@ Miscellaneous notes:
 #+end_src
 
 #+begin_src emacs-lisp
-(use-package org-contacts
-  :straight (org-contacts :type git :host nil :repo "https://repo.or.cz/org-contacts.git")
+(use-package org-contacts   ;; use package from site-lisp
   :after org
   :config
   (setq org-contacts-files (list  "~/forge/contacts.org"))
@@ -3909,6 +3908,12 @@ articles every 2 hours.
         ("f" . forge/elfeed-show-toggle-starred)
         ("o" . elfeed-show-mpv))
   :preface
+  (defun forge/elfeed-load-db ()
+    "Wrapper to load elfeed database from disk when running elfeed."
+    (elfeed-db-load))
+
+  (advice-add 'elfeed :before #'forge/elfeed-load-db)
+
   (defun forge/elfeed-stop-timer ()
     "Cancel elfeed-update-timer."
     (interactive)
@@ -4034,7 +4039,7 @@ articles every 2 hours.
 
   (elfeed-org)
   (setq url-queue-timeout 30
-        elfeed-db-directory (expand-file-name "elfeed" forge-state-dir)))
+        elfeed-db-directory (expand-file-name "elfeed" (concat (getenv "HOME") "/annex/var"))))
         ;; create timer to update elfeed
         ;; elfeed-update-timer (run-at-time 180 (* 120 60) 'forge/elfeed-update)))
 
