update config for ef-themes and add keybinding to elfeed to save

--- a/emacs.org
+++ b/emacs.org
@@ -1033,7 +1033,8 @@ looks good.  It will also define a default theme to start with.
 (use-package ef-themes
   :straight (ef-themes :type git :host gitlab :repo "protesilaos/ef-themes")
   :custom
-  (ef-themes-mixed-fonts t))
+  (ef-themes-mixed-fonts t)
+  (ef-themes-variable-pitch-ui t))
 
 ;; https://gitlab.com/protesilaos/modus-themes
 (use-package modus-themes
@@ -3899,6 +3900,7 @@ articles every 2 hours.
         ("f" . forge/elfeed-search-toggle-starred)
         ("o" . elfeed-search-mpv)
         ("J" . elfeed-unjam)
+        ("S" . forge/elfeed-search-save-db)
         ("R" . forge/elfeed-search-mark-all-read)
         ("F" . forge/elfeed-search-starred)
         ("U" . forge/elfeed-search-unread)
@@ -3998,6 +4000,11 @@ articles every 2 hours.
     "Show elfeed articles tagged with unread"
     (interactive)
     (elfeed-search-set-filter "@6-months-ago +unread"))
+
+  (defun forge/elfeed-search-save-db ()
+    "Save elfeed database."
+    (interactive)
+    (elfeed-db-save))
 
   ;; from manuel uberti
   ;; https://manuel-uberti.github.io/emacs/2017/08/01/elfeed/
