add elfeed hooks to save db

--- a/emacs.org
+++ b/emacs.org
@@ -4002,7 +4002,7 @@ articles every 2 hours.
     (elfeed-search-set-filter "@6-months-ago +unread"))
 
   (defun forge/elfeed-search-save-db ()
-    "Save elfeed database."
+    "Save elfeed database to disk."
     (interactive)
     (elfeed-db-save))
 
@@ -4049,6 +4049,8 @@ articles every 2 hours.
   (push '(starred elfeed-search-starred-title-face) elfeed-search-face-alist)
 
   (elfeed-org)
+  (add-hook 'elfeed-tag-hooks (lambda (entrylist taglist) (elfeed-db-save)))
+  (add-hook 'elfeed-untag-hooks (lambda (entrylist taglist) (elfeed-db-save)))
   (setq url-queue-timeout 30
         elfeed-db-directory (expand-file-name "elfeed" (concat (getenv "HOME") "/annex/var"))))
         ;; create timer to update elfeed
