updates to how elfeed database is saved

--- a/emacs.org
+++ b/emacs.org
@@ -3913,6 +3913,8 @@ articles every 2 hours.
         ("e" . elfeed-show-open-eww)
         ("f" . forge/elfeed-show-toggle-starred)
         ("o" . elfeed-show-mpv))
+  :hook
+  (elfeed-search-update . forge/elfeed-search-save-db)
   :preface
   (defun forge/elfeed-load-db ()
     "Wrapper to load elfeed database from disk when running elfeed."
@@ -4004,7 +4006,8 @@ articles every 2 hours.
   (defun forge/elfeed-search-save-db ()
     "Save elfeed database to disk."
     (interactive)
-    (elfeed-db-save))
+    (elfeed-db-save)
+    (message "elfeed db saved."))
 
   ;; from manuel uberti
   ;; https://manuel-uberti.github.io/emacs/2017/08/01/elfeed/
@@ -4049,8 +4052,6 @@ articles every 2 hours.
   (push '(starred elfeed-search-starred-title-face) elfeed-search-face-alist)
 
   (elfeed-org)
-  (add-hook 'elfeed-tag-hooks (lambda (entrylist taglist) (elfeed-db-save)))
-  (add-hook 'elfeed-untag-hooks (lambda (entrylist taglist) (elfeed-db-save)))
   (setq url-queue-timeout 30
         elfeed-db-directory (expand-file-name "elfeed" (concat (getenv "HOME") "/annex/var"))))
         ;; create timer to update elfeed
