use html checkbox type for html exports

--- a/emacs.org
+++ b/emacs.org
@@ -3395,6 +3395,7 @@ Miscellaneous notes:
   (org-export-allow-bind-keywords t)
   (org-export-backends '(ascii html icalendar latex md))
   (org-export-coding-system 'utf-8)
+  (org-html-checkbox-type 'html)
   (org-log-done t)
   (org-log-reschedule "note")
   (org-log-into-drawer t)
