carve off another section in ibuffer for dns zone files

--- a/emacs.org
+++ b/emacs.org
@@ -1616,6 +1616,10 @@ the window contents.
        (or
         (filename . "-rancid/")
         (mode . eos-mode)))
+      ("DNS"
+       (or
+        (mode . dns-mode)
+        (filename . "dns-zones/")))
       ("Lisp"
        (mode . emacs-lisp-mode))
       ("Dired" (mode . dired-mode))
